feat: add header when request
Signed-off-by: Eray Ates <eray.ates@worldline.com>

--- a/testdata/testBody.yaml
+++ b/testdata/testBody.yaml
@@ -7,7 +7,8 @@ client:
   rest:
   - concurrent: 1
     check:
-    - url: "https://api.punkapi.com/v2/beers/1?pong=Buzz"
+    - request:
+        url: "https://api.punkapi.com/v2/beers/1?pong=Buzz"
       status: 200
       body:
         variable:
